--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-Jinja2==2.8
-Flask
-gunicorn
-psycopg2
+blinker==1.4
+click==6.7
+Flask==1.0.2
+Flask-Mail==0.9.1
+gunicorn==19.8.1
+itsdangerous==0.24
+Jinja2==2.10
+MarkupSafe==1.0
+psycopg2==2.7.5
+Werkzeug==0.14.1
